# sophie

./: .env.example  .gitignore  AI_GUIDELINES.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT_RULES.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: cli.py  main.py  run_bot.py
app/agent/: __init__.py  loop.py
app/config/: models.py  settings.py
app/core/: command_bus.py  exceptions.py
app/devops/: __init__.py  server_registry.py
app/domain/: commands.py
app/llm/: manager.py  model_registry.py  prompt_builder.py  schemas.py
app/memory/: base.py  in_memory.py
app/prompts/: __init__.py  behavior.md  personality.md  system.md
app/providers/: base.py  openrouter.py
app/router/: base.py  router.py
app/security/: __init__.py  exceptions.py  policy.py  validator.py
app/telegram/: bot.py  handlers.py
app/tools/: __init__.py  base.py  call.py  docker.py  docker_health.py  echo.py  executor.py  filesystem.py  git.py  http.py  manager.py  registry.py  result.py  server_info.py  shell.py  ssh.py
app/workers/: base.py  qa.py  (+6 more)
capabilities/: TEMPLATE.md  remote_infrastructure.md
docs/: security_model.md  tool_execution.md
tests/: test_agent_loop.py  test_app.py  test_cli.py  test_command_bus.py  test_commands.py  test_devops_worker.py  test_echo_worker.py  test_llm_manager.py  test_memory.py  test_model_registry.py  test_openrouter_provider.py  test_prompt_builder.py  test_rule_based_router.py  test_security_validator.py  test_server_registry.py  test_telegram_handlers.py  test_tool_registry.py
(+4 files in other folders)
