[project]
name = "sophie"
version = "0.1.0"
description = "Personal AI agent platform foundation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.10.0",
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "paramiko>=3.5.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[dependency-groups]
dev = [
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
